--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "epic-spinners": "^2.0.0",
+    "gh-pages": "^4.0.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41"
   },
